--- a/jellofrice.html
+++ b/jellofrice.html
@@ -65,7 +65,7 @@
   <li>Serve hot!</li>
 </ul>
 </ol>
- <a href="../index.html"target="_blank"rel="noopener"noreferrer>Home</a>
+ <a href="../index.html">Home</a>
   
   
 </body>
