--- a/Shawarma.html
+++ b/Shawarma.html
@@ -55,7 +55,7 @@
  <li>Wrap and Serve: Tightly fold the sides of the wrap inward, then roll it up from the bottom. Serve immediately.</li>
 </ol>
 
-  <a href="./odin recipes../index.html" target="_blank"rel="noopener" noreferrer>Home</a>
+  <a href="../index.html" >Home</a>
   
 </body>
 
